--- a/src/styles/components/Contact.css
+++ b/src/styles/components/Contact.css
@@ -94,3 +94,13 @@
     align-items: center;
   }
 }
+
+@media screen and (min-width: 1512px) {
+  #footer {
+    max-width: 1512px;
+    margin: 0 auto;
+  }
+  #footer .section-two {
+    width: 100%;
+  }
+}
