--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -99,3 +99,10 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+@media screen and (min-width: 1512px) {
+  #projects {
+    max-width: 1512px;
+    margin: 0 auto;
+  }
+}
