--- a/src/styles/components/Technologies.css
+++ b/src/styles/components/Technologies.css
@@ -105,3 +105,10 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+@media screen and (min-width: 1512px) {
+  #technologies {
+    max-width: 1512px;
+    margin: 0 auto;
+  }
+}
